src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  /***************************************/
  /* Sidebar */
  /***************************************/

  .sidebar-icon {
    @apply relative flex justify-center items-center
    mx-auto my-2 w-12 h-12 
  bg-gray-200 hover:bg-green-600 dark:bg-gray-800 
  text-green-500 hover:text-white
    rounded-3xl hover:rounded-xl
    transition-all duration-300 ease-linear
    cursor-pointer shadow-lg;
  }

  .sidebar-tooltip {
    @apply absolute w-auto min-w-max p-2 m-2 left-14 rounded-md shadow-md
    bg-gray-900 text-white 
    text-xs font-bold
    transition-all duration-100 scale-0 origin-left;
  }

  .sidebar-hr {
    @apply bg-gray-200 dark:bg-gray-800 
    border border-gray-200 dark:border-gray-800 
    mx-2;
  }

  /***************************************/
  /* Top Navigation */
  /***************************************/

  .top-navigation {
    @apply absolute top-0 left-0 
    flex flex-row justify-evenly items-center 
    bg-gray-300 dark:bg-gray-700 
    m-0 w-full h-[9vh]
    shadow-lg;
  }

  .top-navigation-icon {
    @apply text-gray-500 
    mr-3 ml-4
    transition duration-300 ease-in-out
    hover:text-pink-400
    cursor-pointer;
  }

  .top-navigation-icon:first {
    @apply ml-auto mr-4;
  }

  .title-hashtag {
    @apply text-lg font-semibold tracking-wider text-gray-500 
    ml-2 my-auto;
  }

  .title-text {
    @apply font-semibold text-xl tracking-wider text-opacity-80 text-gray-500
    mr-auto ml-2
    transition duration-300 ease-in-out;
  }

  .search {
    @apply w-1/5 flex flex-row items-center justify-start 
    text-gray-500
    bg-gray-400 dark:bg-gray-600
    px-2 h-9 mx-0
    rounded-md shadow-md
    transition duration-300 ease-in-out;
  }
  .search-input {
    @apply w-full font-sans  font-semibold 
    bg-transparent outline-none 
    text-gray-500 placeholder-gray-500 
    pl-1 rounded;
  }

  /***************************************/
  /* Content Container */
  /***************************************/
  .content-container {
    @apply relative flex flex-col 
    bg-gray-300 dark:bg-gray-700
    m-0 h-full w-full
    overflow-hidden;
  }

  /***************************************/
  /* Content (post) List */
  /***************************************/

  .content-list {
    @apply flex flex-col-reverse
    h-screen w-full m-0 pt-[10vh] pb-14
    overflow-scroll;
  }

  .post {
    @apply flex flex-row items-start justify-start
    py-4 px-8 m-0
    cursor-pointer;
  }

  .post-selected {
    @apply bg-green-400 dark:bg-gray-900
    shadow-md;
  }

  .avatar-wrapper {
    @apply w-1/10 m-0 flex justify-end items-start;
  }

  .avatar {
    @apply rounded-full w-14 h-14 mr-4;
  }

  .post-content {
    @apply grow m-0 w-9/10;
  }

  .post-owner {
    @apply font-semibold text-gray-800 dark:text-white cursor-pointer;
  }

  .post-text {
    @apply text-lg text-left text-gray-800 dark:text-white;
  }

  .timestamp {
    @apply text-xs text-left font-semibold text-gray-500 dark:text-gray-600
    ml-2;
  }

  /***************************************/
  /* Bottom Bar */
  /***************************************/

  .bottom-bar {
    @apply absolute left-[5%] bottom-8 
    flex flex-row items-center gap-1
    w-9/10 px-4 py-1 rounded-lg
    bg-gray-400 dark:bg-gray-600;
  }

  .bottom-bar-input {
    @apply w-full p-2 rounded-md 
    bg-transparent outline-none
    text-gray-500 dark:text-gray-400
    placeholder-gray-500 dark:placeholder-gray-400
    cursor-text;
  }

  /***************************************/
  /* ChannelBar */
  /***************************************/

  .channel-bar {
    @apply relative w-80 h-screen m-0 ml-16 bg-gray-200 dark:bg-gray-800
    overflow-hidden;
  }

  .channel-block {
    @apply absolute top-0 left-0 flex items-center justify-center
    h-16 m-0 p-0;
  }

  .channel-block-text {
    @apply text-lg font-bold tracking-wider
    text-gray-600 dark:text-gray-400
    mr-auto ml-4 my-auto align-middle;
  }

  .channel-container {
    @apply flex flex-col items-center justify-start
    p-1 m-0 mt-16 h-9/10 overflow-auto;
  }

  .dropdown {
    @apply m-0 w-full px-2 pb-2
    transition duration-300 ease-in-out;
  }

  .dropdown-header {
    @apply flex flex-row items-center justify-evenly
    mx-0 text-gray-500
    cursor-pointer;
  }

  .dropdown-header-text {
    @apply text-gray-500  text-opacity-90 
    text-lg font-semibold
    cursor-default;
  }

  .dropdown-header-text-selected {
    @apply text-blue-500 text-opacity-90 text-lg font-bold;
  }

  .dropdown-selection {
    @apply flex flex-row items-center justify-evenly
    mt-1 mr-auto ml-2
    transition duration-300 ease-in-out
    cursor-pointer;
  }

  .dropdown-selection-text {
    @apply text-gray-500 font-semibold tracking-wide
    mr-auto 
    transition duration-300 ease-in-out 
    hover:text-pink-500 dark:hover:text-gray-500
    cursor-pointer;
  }
}

